--- a/cssfil/alltmulig.css
+++ b/cssfil/alltmulig.css
@@ -228,7 +228,7 @@ button:hover {
 
 .footer-content a:hover {
     opacity: 0.6;
-color: #9505e3eb;
+    color: #9505e3eb;
 }
 
 .tilbake {
@@ -383,7 +383,7 @@ color: #9505e3eb;
     font-size: 1.5rem;
 }
 
-.Forebud-prøve-EKSTERN{
+.Forebud-prøve-EKSTERN {
     transform: translate(57.6px, 81px);
 }
 
@@ -413,4 +413,35 @@ color: #9505e3eb;
     box-shadow:
         0 10px 35px rgba(140, 90, 255, 0.25),
         0 0 28px rgba(0, 255, 255, 0.18);
+}
+
+/* memes-container section */
+.memes-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 20px;
+    margin-top: 30px;
+    margin-bottom: 50px;
+}
+
+.memes-mansborkin {
+    width: 250px;
+    height: 250px;
+    border-radius: 12px;
+    box-shadow: 0 0 20px rgba(150, 70, 255, 0.5);
+}
+
+.meme-frame {
+    max-width: 300px;  
+    max-height: auto;
+    padding: 15px;
+    border: 3px solid rgba(150, 70, 255, 0.5);
+    border-radius: 16px;
+    box-shadow: 0 0 20px rgba(150, 70, 255, 0.7);
+    background: rgba(255, 255, 255, 0.05);
+    backdrop-filter: blur(15px);
+    width: fit-content;
+    height: fit-content;
 }
